Updating Testimonials section

--- a/proiect/index.html
+++ b/proiect/index.html
@@ -332,7 +332,6 @@
             <p>Bouquets</p>
             <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Blooming Beauty"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -343,7 +342,6 @@
             <p>Bouquets</p>
             <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Floral Elegance"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -354,7 +352,6 @@
             <p>Bouquets</p>
             <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Petals & Passion"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -365,7 +362,6 @@
             <p>Flower Arrangements</p>
             <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Blossoms of Love"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -376,7 +372,6 @@
             <p>Flower Arrangements</p>
             <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Nature's Art"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -387,7 +382,6 @@
             <p>Plants</p>
             <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Fresh & Fabulous"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -398,7 +392,6 @@
             <p>Bouquets</p>
             <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="The Flower Touch"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -409,7 +402,6 @@
             <p>Flower Arrangements</p>
             <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Botanical Bliss"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
 
@@ -420,7 +412,6 @@
             <p>Plants</p>
             <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightbox preview-link" title="Elegance in a Pot"><i class="bi bi-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a>
           </div>
         </div>
       </div>
@@ -438,13 +429,20 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <h3>Alex &amp; Emma </h3>
+              <div class="stars text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i> <!-- 5/5 stars -->
+              </div>
               <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <i class="bi bi-quote quote-icon-left"></i>
+                Your beautiful flowers and kind personality made such a difference on our wedding day. From the moment we met, it was
+                clear how much you love what you do. Your passion and positivity made everything so easy, and we&rsquo;re so grateful to have
+                had you as our florist.
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
           </div><!-- End testimonial item -->
@@ -452,13 +450,19 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <h3>Elena</h3>
+              <div class="stars text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i> 
+              </div>
               <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <i class="bi bi-quote quote-icon-left"></i>
+                Great service and amazing flowers. I picked an arrangement with out-of-season flowers and gave them some creative
+                freedom. The recipient loved it &ndash; it was gorgeous! I&rsquo;ll definitely use this florist again!
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
           </div><!-- End testimonial item -->
@@ -466,13 +470,18 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <h3>Matei &amp; Ana</h3>
+              <div class="stars text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i> 
+              </div>
               <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor
-                labore quem eram duis noster aute amet eram fore quis sint minim.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <i class="bi bi-quote quote-icon-left"></i>
+                Floral Heaven was fantastic to work with for our event! We highly recommend them to everyone! A huge thank you!
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
           </div><!-- End testimonial item -->
@@ -480,13 +489,19 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <h3>M &amp; I</h3>
+              <div class="stars text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star"></i>
+              </div>
               <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim
-                dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <i class="bi bi-quote quote-icon-left"></i>
+                Floral Heaven provided the flowers for our wedding, and they were absolutely beautiful! While communication was a bit
+                slow at times, everything was handled professionally.
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
           </div><!-- End testimonial item -->
@@ -494,13 +509,19 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <h3>Ioana M.</h3>
+              <div class="stars text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
               <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-                labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <i class="bi bi-quote quote-icon-left"></i>
+                I ordered a bouquet for my daughter&rsquo;s graduation and it was just perfect! The flowers were beautiful and the delivery
+                was quick. My daughter was so happy! Thank you, Floral Heaven, for making this day even more special.
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
           </div><!-- End testimonial item -->
@@ -510,7 +531,8 @@
       </div>
 
     </div>
-  </section><!-- End  Section 5 -->
+  </section>
+  <!-- END  Section 5 -->
 
   <!-- ======= Contact Section 6 ======= -->
   <section id="contact" class="contact">
@@ -519,8 +541,8 @@
       <div class="section-title">
         <h2>Contact</h2>
         <h3><span>Contact Us</span></h3>
-        <p>Get in touch with us! Use the contact form below to send us a message, and we’ll get back to you as soon as possible.
-          You can also reach us directly using the contact details provided. We’re here to help with all your floral needs!</p>
+        <p>Get in touch with us! Use the contact form below to send us a message, and we&rsquo;ll get back to you as soon as possible.
+          You can also reach us directly using the contact details provided. We&rsquo;re here to help with all your floral needs!</p>
       </div>
 
       <div class="row" data-aos="fade-up" data-aos-delay="100">
