Dark Mode functionality completed

--- a/proiect/index.html
+++ b/proiect/index.html
@@ -160,7 +160,7 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>Walter White</h4>
+              <h4>Mihai Rus</h4>
               <span>Customer Service Manager</span>
             </div>
           </div>
@@ -178,7 +178,7 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>Sarah Jhonson</h4>
+              <h4>Ana Maria Ionescu</h4>
               <span>Marketing Specialist</span>
             </div>
           </div>
@@ -196,7 +196,7 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>William Anderson</h4>
+              <h4>Vlad Georgescu</h4>
               <span>Inventory and Order Coordinator</span>
             </div>
           </div>
@@ -214,7 +214,7 @@
               </div>
             </div>
             <div class="member-info">
-              <h4>Amanda Jepson</h4>
+              <h4>Elena Popa</h4>
               <span>Floral Designer</span>
             </div>
           </div>
@@ -729,11 +729,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Bouquets</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Plants</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Flower Arrangements</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Safe and Fast Delivery</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">The Perfect Gift</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Subscription</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Floral Styling &amp; Consultancy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Free Delivery</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Exclusive Member Discounts</a></li>
             </ul>
           </div>
 
