Plans section added

--- a/proiect/index.html
+++ b/proiect/index.html
@@ -66,9 +66,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#featured-services">Highlights</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li> 
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Plans</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto " href="#testimonials">Testimonials</a></li>
@@ -134,20 +134,21 @@
   </section>
   <!-- END Section 1 -->
 
-   <!-- ======= START Section 2======= -->
-
+  <!-- ======= START Section 2======= -->
+  
   <section id="about" class="team section-bg">
     <div class="container" data-aos="fade-up">
-
+  
       <div class="section-title">
         <h2>About</h2>
         <h3>Our Hardworking <span>Team</span></h3>
-        <p>Our team is passionate about creating beautiful floral arrangements, dedicated to bringing freshness and joy to every
+        <p>Our team is passionate about creating beautiful floral arrangements, dedicated to bringing freshness and joy to
+          every
           occasion.</p>
       </div>
-
+  
       <div class="row">
-
+  
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
           <div class="member">
             <div class="member-img">
@@ -165,7 +166,7 @@
             </div>
           </div>
         </div>
-
+  
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="member">
             <div class="member-img">
@@ -183,7 +184,7 @@
             </div>
           </div>
         </div>
-
+  
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="member">
             <div class="member-img">
@@ -201,7 +202,7 @@
             </div>
           </div>
         </div>
-
+  
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
           <div class="member">
             <div class="member-img">
@@ -219,12 +220,78 @@
             </div>
           </div>
         </div>
-
+  
       </div>
-
+  
     </div>
   </section>
   <!-- END Section 2 -->
+  
+  <!-- ======= START Section New Pricing======= -->
+  <section id="pricing" class="pricing section">
+  
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Floral Plans</h2>
+      <h3>Check our <span>Floral Plans</span></h3>
+      <p>Choose the Floral Plan that Fits Your Style!</p>
+    </div><!-- End Section Title -->
+  
+    <div class="container">
+  
+      <div class="row g-4 g-lg-0">
+  
+        <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="pricing-item">
+            <h3>Basic Plan</h3>
+            <h4><sup>$</sup>30<span> / month</span></h4>
+            <ul>
+              <li><i class="bi bi-check"></i> <span>1 Bouquet (of your choice)</spanF> </li>
+              <li><i class="bi bi-check"></i> <span>1 Plant (of your choice)</span></li>
+              <li><i class="bi bi-check"></i> <span>1 Perfect Gift</span></li>
+              <li class="na"><i class="bi bi-x"></i> <span>1 Floral Arrangement</span></li>
+              <li class="na"><i class="bi bi-x"></i> <span>Floral Styling Consultancy</span></li>
+            </ul>
+            <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+          </div>
+        </div><!-- End Pricing Item -->
+  
+        <div class="col-lg-4 featured" data-aos="zoom-in" data-aos-delay="200">
+          <div class="pricing-item">
+            <h3>Pro Plan</h3>
+            <h4><sup>$</sup>65<span> / month</span></h4>
+            <ul>
+              <li><i class="bi bi-check"></i> <span>1 Bouquet (of your choice)</span></li>
+              <li><i class="bi bi-check"></i> <span>1 Plant (of your choice)</span></li>
+              <li><i class="bi bi-check"></i> <span>1 Perfect Gift</span></li>
+              <li><i class="bi bi-check"></i> <span>1 Floral Arrangement</span></li>
+              <li><i class="bi bi-check"></i> <span>Floral Styling Consultancy</span></li>
+            </ul>
+            <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+          </div>
+        </div><!-- End Pricing Item -->
+  
+        <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="pricing-item">
+            <h3>Expert Plan</h3>
+            <h4><sup>$</sup>100<span> / month</span></h4>
+            <ul>
+              <li><i class="bi bi-check"></i> <span>3 Bouquets (of your choice)</span></li>
+              <li><i class="bi bi-check"></i> <span>1 Plant (of your choice)</span></li>
+              <li><i class="bi bi-check"></i> <span>2 Perfect Gifts</span></li>
+              <li><i class="bi bi-check"></i> <span>2 Floral Arrangements</span></li>
+              <li><i class="bi bi-check"></i> <span>Floral Styling Consultancy</span></li>
+            </ul>
+            <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
+          </div>
+        </div><!-- End Pricing Item -->
+  
+      </div>
+  
+    </div>
+  
+  </section><!-- /Pricing Section -->
+  <!-- ======= End Section New Pricing======= -->
 
    <!-- ======= START Section 3======= -->
   <section id="services" class="services">
@@ -303,7 +370,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bi bi-cart-check"></i></div>
             <h4><a href="">Free Delivery</a></h4>
-            <p>For orders over 400 RON, transportation is free.</p>
+            <p>For orders over 400 RON, transportation is free. This offer is always available.</p>
           </div>
         </div>
 
