--- a/proiect/index.html
+++ b/proiect/index.html
@@ -100,7 +100,7 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-flower1"></i></div>
             <h4 class="title"><a href="">Safe delivery</a></h4>
-            <p class="description">across the country</p>
+            <p class="description"> service anywhere across the country</p>
           </div>
         </div>
 
@@ -108,7 +108,7 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-box2-heart"></i></div>
             <h4 class="title"><a href="">The perfect gift</a></h4>
-            <p class="description">for your loved ones</p>
+            <p class="description">to surprise and delight your loved ones</p>
           </div>
         </div>
 
@@ -116,15 +116,15 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-truck"></i></div>
             <h4 class="title"><a href="">Fast delivery</a></h4>
-            <p class="description"> in less than 24 hours</p>
+            <p class="description"> straight to your door in less than 24 hours</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
           <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-credit-card"></i></div>
-            <h4 class="title"><a href="">Secure</a></h4>
-            <p class="description">online payment</p>
+            <h4 class="title"><a href="">Secure and easy</a></h4>
+            <p class="description">online payment for your peace of mind</p>
           </div>
         </div>
 
@@ -764,7 +764,7 @@
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
             <p>Join our newsletter for the latest news and updates!</p>
-            <form action="" method="post" class="needs-validation" novalidate>
+            <form action="" method="post">
               <input type="email" name="email" id="email" class="form-control" placeholder="Enter a valid email address" required>
               <input type="submit" value="Subscribe">
             </form>
